--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "minimalistic",
-    "displayName": "Minimalistic",
-    "description": "Minimalistic color theme",
+    "name": "minimalisticc",
+    "displayName": "Minimalisticc",
+    "description": "Minimalisticc color theme",
     "version": "0.1.2",
-    "publisher": "8bitslime",
+    "publisher": "shcott",
     "engines": {
         "vscode": "^1.22.0"
     },
     "license": "MIT",
-    "homepage": "https://github.com/8bitslime/Minimalistic-vscode",
+    "homepage": "https://github.com/shcott/Minimalistic-vscode",
     "bugs": {
-        "url": "https://github.com/8bitslime/Minimalistic-vscode/issues"
+        "url": "https://github.com/shcott/Minimalistic-vscode/issues"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/8bitslime/Minimalistic-vscode.git"
+        "url": "https://github.com/shcott/Minimalistic-vscode.git"
     },
     "categories": [
         "Themes"
@@ -22,9 +22,9 @@
     "contributes": {
         "themes": [
             {
-                "label": "Minimalistic",
+                "label": "Minimalisticc",
                 "uiTheme": "vs-dark",
-                "path": "./themes/Minimalistic-color-theme.json"
+                "path": "./themes/Minimalisticc-color-theme.json"
             }
         ]
     }
